fixed spacing

--- a/style.css
+++ b/style.css
@@ -91,11 +91,11 @@ h1 {
 
 .cv-page {
   font-size: 1.1rem;
-  line-height: 1.6;
+  line-height: 1.4;
 }
 
 .cv-page h2 {
-  font-size: 2em;
+  font-size: 1.8em;
   margin-top: 2em;
   margin-bottom: 0.5em;
   font-weight: bold;
